--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dash-highlights",
   "displayName": "dash-highlights",
   "description": "Syntax highlighting for the Dash language",
+  "publisher": "SamuelCourchesne",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.106.0"
@@ -9,6 +10,10 @@
   "categories": [
     "Programming Languages"
   ],
+   "repository": {
+    "type": "git",
+    "url": "https://github.com/Ap0llonn/dash-highlights"
+  },
   "contributes": {
     "languages": [{
       "id": "dash",
