feat: add document formatting provider and snippets for Dash language

--- a/package.json
+++ b/package.json
@@ -42,6 +42,12 @@
         "scopeName": "source.dash",
         "path": "./syntaxes/dash.tmLanguage.json"
       }
+    ],
+    "snippets": [
+      {
+        "language": "dash",
+        "path": "./snippets/dash.code-snippets"
+      }
     ]
   }
 }
